2003-09-06 Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "hi" to ALL_LINGUAS.

2003-09-04 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Added 127.0.0.1 to the list of IP's that
	shouldn't be translated. (thanks to Roger Hardiman)
	
2003-09-04 Damien Sandras  <dsandras@seconix.com>

	* src/sound_handling.cpp: Destroy information window only when
	the test ends.
	
2003-09-04 Damien Sandras  <dsandras@seconix.com>

	* src/config.cpp: Disable the druid audio test button when
	no devices are found.
	
	* src/druid.cpp: See above.
	
	* src/endpoint.cpp, src/endpoint.h: Use a normal PNOTIFIER Timer to 
	display the statistics every second in a call.

	* src/sound_handling.cpp, src/sound_handling.h: Display an informative
	popup when tests are running if the devices are successfully opened.
	Disable test button when a test has failed. Made the informative
	dialog MODAL.
	
2003-09-03 Damien Sandras  <dsandras@seconix.com>

	* src/sound_handling.cpp: Added popup.
	
2003-09-03 Damien Sandras  <dsandras@seconix.com>

	* src/sound_handling.cpp: Fixed previous commit.
	
2003-09-03 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp, src/endpoint.h: Protected CreateAudioTester
	and DeleteAudioTester with mutexes.
	
	* src/sound_handling.cpp, src/sound_handling.h: Added PSyncPoint's 
	to prevent the threads to be deleted before the Main is started.
	
2003-09-02 Damien Sandras  <dsandras@seconix.com>

	* src/druid.cpp: Use a new algorithm for the druid test
	to ensure it is acting like a real full-duplex program.
	
	* src/endpoint.cpp: See above. Added gdk_threads_leave in callback
	to ensure the GDK mutex is unlocked to prevent crossed mutexes 
	deadlock.

	* src/sound_handling.cpp: See above. GMAudioTester is not anymore
	an AutoDeleteThread. Added GMAudioRP, for the player and recorder.
	They write and read to/from a circular buffer.
	
	* src/sound_handling.h: See above.
	
2003-09-02 Damien Sandras  <dsandras@seconix.com>
