@@ -1,3 +1,8 @@
+2003-09-07 Damien Sandras  <dsandras@seconix.com>
+
+	* src/endpoint.cpp: Do not apply IP translation when IPv6 is
+	used. Patch from sjoerd@luon.net (sjoerd).
+	
 2003-09-06 Guntupalli Karunakar  <karunakar@freedomink.org>
 
 	* configure.in: Added "hi" to ALL_LINGUAS.
